# native-addons-materials

./: README.md
error-handlers/: README.md
error-handlers/napi-return/: binding.gyp  divider.cpp  package.json
error-handlers/napi-throw/: binding.gyp  divider.cpp  index.js
error-handlers/node-addon-api-return/: binding.gyp  divider.cpp  package.json
error-handlers/node-addon-api-throw/: binding.gyp  divider.cpp  index.js
matrix/: .gitignore  README.md  binding.gyp  package-lock.json  package.json  server.js
matrix/cpp-addons/: matrix.cpp  utils.cpp
matrix/js-native/: base.js  index.js  non-blocking.js  optimized.js
matrix/rust-addons/: Cargo.toml  index.js  package.json
matrix/rust-addons/src/: helpers.rs  lib.rs
matrix/rust-addons/src/methods/: accelerate.rs  base.rs  mod.rs  simd.rs
matrix/tests/: cpp-addon.js  helper.js  index.js  js-native.js  rust-addon.js  server.js  wasm.js
matrix/utils/: endpoints.js  generate-matrix.js
matrix/wasm/: compile.sh  index.js  matrix.cpp  matrix.mjs  matrix.wasm
memory-examples/: .gitignore  README.md  addon.cpp  binding.gyp  package-lock.json  package.json
memory-examples/demo/: array.js  buffer.js  ext-buffer.js  gc.js  leak.js  simple.js  utils.js
simple-examples/: README.md
simple-examples/nan/: README.md  binding.gyp  hasher.cpp  index.js  package-lock.json  package.json
simple-examples/napi/: binding.gyp  hasher.cpp  index.js  package-lock.json
simple-examples/native-libs/: binding.gyp  hasher.cpp  package-lock.json  package.json
simple-examples/node-addon-api/: README.md  binding.gyp  (+2 more)
(+110 files in other folders)
